Fixes on nav bar, footer and x overflow

--- a/main.css
+++ b/main.css
@@ -37,6 +37,7 @@ body {
   background: url("images/Background-1.jpg") no-repeat center fixed;
   background-size: cover;
   overflow-x: hidden;
+  overflow-y: hidden;
   padding: 0 24px;
   box-sizing: border-box;
 }
@@ -154,10 +155,12 @@ header {
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
   text-align: center;
+  overflow-y: scroll;
+  padding: 20px 0;
 }
 
 li {
@@ -204,6 +207,7 @@ li {
 
 .menu-toggler.open {
   transform: rotate(-45deg);
+  position: fixed;
 }
 
 .bar {
@@ -313,6 +317,16 @@ li {
   margin-top: 5rem;
 }
 
+.social-media ul {
+  list-style: none;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
 .social-media i {
   font-size: 5rem;
   transition: color 650ms;
@@ -643,10 +657,6 @@ input[type="submit"]:hover {
 
   .landing-text h6 {
     font-size: 2rem;
-  }
-
-  .nav-list {
-    flex-direction: column;
   }
 
   li {
